# asterisk_gui

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
resource/: hexapod_controller.ui  leg_controller.ui
scripts/: hexapod_controller_gui.py  leg_controller_gui.py
src/asterisk_gui/: __init__.py  hexapod_controller_gui.py
