<?xml version="1.0"?>
<package format="2">
  <name>asterisk_gui</name>
  <version>0.0.1</version>
  <description>GUI package for Asterisk hexapod robot control</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
 
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> 
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>